# rain

./: .flake8  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  _config.yml  build.rs  build_capnp.sh  index.md  publish_version.sh
capnp/: client.capnp  common.capnp  datastore.capnp  gate.capnp  governor.capnp  graph.capnp  server.capnp  subworker.capnp  tasks.capnp  worker.capnp
cpp/rainsw/: CMakeLists.txt
cpp/rainsw/src/: common.h  connection.cpp  connection.h  context.cpp  context.h  datainstance.cpp  datainstance.h  ids.cpp  ids.h  log.cpp  log.h  subworker.cpp  subworker.h  utils.cpp  utils.h
cpp/rainsw/tester/: context.cpp  context.h  main.cpp
cpp/tasklib/: CMakeLists.txt
cpp/tasklib/src/: connection.cpp  connection.h  context.cpp  context.h  datainstance.cpp  datainstance.h  executor.cpp  executor.h  ids.cpp  ids.h  log.cpp  log.h  utils.cpp  utils.h
cpp/tasklib/tester/: main.cpp
dashboard/: make_dist.sh  package-lock.json  package.json  tsconfig.json  tslint.json
dashboard/public/: index.html
dashboard/src/: App.js  App.tsx  index.js  index.tsx  registerServiceWorker.js
docs/: .buildinfo  Makefile  dev.html  examples.html  executors.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  python_api.html  quickstart.html  search.html  searchindex.js  user.html
docs/_modules/: index.html
docs/_sources/: dev.rst.txt  examples.rst.txt  executors.rst.txt  install.rst.txt  quickstart.rst.txt  user.rst.txt
docs/dev/: testing.md
docs/guide/: architecture.rst  args.rst  basic_tasks.rst  concepts.rst  conf.py  dev.rst  dev_dashboard.rst  directories.rst  errors.rst  examples.rst  execute_task.rst  executors.rst  getting_started.rst  index.rst  install.rst  introduction.rst  overview.rst  python_api.rst  python_tasks.rst  quickstart.rst  roadmap.rst  session.rst  tasks.rst  user.rst
docs/reps/: rep1-commit_message_convetions.md
python/: README.md  requirements.txt  setup.py
python/rain/: __init__.py  capnp
rain-task/: Cargo.toml  README.md
rain-task-test/: Cargo.toml
rain-task-test/src/: main.rs
rain-task/src/: context.rs  errors.rs  framing.rs  input.rs  lib.rs  macros.rs  output.rs  subworker.rs  tests.rs
rain_client/: Cargo.toml
rain_client/src/: lib.rs
rain_client/src/client/: client.rs  communicator.rs  dataobject.rs  localcluster.rs  mod.rs  rpc.rs  session.rs  task.rs  tasks.rs
rain_client_test/: Cargo.toml
rain_client_test/src/: main.rs
rain_core/: Cargo.toml  README.md  build.rs
rain_core/capnp/: client.capnp  common.capnp  monitor.capnp  server.capnp
rain_core/src/: errors.rs  lib.rs
rain_core/src/comm/: client_message.rs  connection.rs  executor.rs  mod.rs
rain_core/src/common/: attributes.rs  datatype.rs  events.rs  id.rs  mod.rs  resources.rs  rpc.rs
rain_core/src/common/fs/: fs.rs  logdir.rs
rain_core/src/common/logging/: sqlite_logger.rs
rain_core/src/governor/fs/: tempfile.rs
rain_core/src/governor/graph/: dataobj.rs  executor.rs
rain_core/src/governor/rpc/: control.rs  executor_serde.rs
rain_core/src/logging/: events.rs  logger.rs  mod.rs  monitor.rs  sqlite_logger.rs
rain_core/src/server/: http.rs  scheduler.rs  state.rs  testmode.rs
rain_core/src/server/graph/: session.rs
rain_core/src/sys/: fs.rs  logdir.rs  mod.rs  sys.rs
rain_core/src/types/: data_type.rs  id.rs  info.rs  mod.rs  spec.rs
rain_core/src/utils/: asyncinit.rs  consistency.rs  mod.rs  wrapped.rs
rain_server/: Cargo.toml  README.md
rain_server/dashboard/src/components/: AcyclicGraph.css  Chart.js  Sessions.js
rain_server/src/: main.rs
rain_server/src/common/: connection.rs  mod.rs  monitor.rs
rain_server/src/governor/: state.rs
rain_server/src/governor/data/: builder.rs  data.rs  mod.rs  pack.rs  transport.rs
rain_server/src/governor/fs/: tempfile.rs  workdir.rs
rain_server/src/governor/graph/: dataobj.rs  executor.rs  graph.rs  task.rs
rain_server/src/governor/rpc/: bootstrap.rs  control.rs  executor.rs  fetch.rs  mod.rs
rain_server/src/governor/tasks/: basic.rs  instance.rs  run.rs
rain_server/src/server/: http.rs  mod.rs  scheduler.rs  state.rs  testmode.rs
rain_server/src/server/graph/: client.rs  dataobj.rs  governor.rs  graph.rs  mod.rs  session.rs  task.rs
rain_server/src/server/logging/: logger.rs  sqlite_logger.rs
rain_server/src/server/rpc/: bootstrap.rs  client.rs  governor.rs  mod.rs
rain_server/src/server/ws/: client.rs  comm.rs  mod.rs
rain_server/src/start/: common.rs  mod.rs  process.rs  ssh.rs  starter.rs
rain_task/: Cargo.toml  README.md
rain_task/src/: context.rs  errors.rs  executor.rs  framing.rs  input.rs  lib.rs  macros.rs  output.rs  subworker.rs  tests.rs
rain_task_test/: Cargo.toml
rain_task_test/src/: main.rs
src/: bin.rs  lib.rs  main.rs
src/capnp_gen/: mod.rs
src/client/: capnp.rs  client.rs  communicator.rs  data_object.rs  dataobject.rs  mod.rs  rpc.rs  session.rs  task.rs  tasks.rs
src/common/: additional.rs  asycinit.rs  attributes.rs  comm.rs  convert.rs  datatype.rs  events.rs  fs.rs  id.rs  keeppolicy.rs  mod.rs  monitor.rs  monitoring.rs  resources.rs  rpc.rs  sys.rs  wrapped.rs
src/governor/: mod.rs  state.rs
src/graph/: common.rs  dataobj.rs  graph.rs  mod.rs  task.rs  worker.rs
src/server/: client.rs  client_srv.rs  dataobj.rs  datastore.rs  design.md  gate.rs  graph.rs  http.rs  interface.rs  mod.rs  scheduler.rs  session.rs  state.rs  task.rs  testmode.rs  upstream.rs  worker.rs
src/start/: common.rs  localcluster.rs  mod.rs  process.rs  ssh.rs  starter.rs
src/worker/: control.rs  dataobj.rs  graph.rs  mod.rs  rpc.rs  state.rs  subworker.rs  task.rs  workdir.rs
tests/pytests/: conftest.py  executor_tester.py  schedtester.py  test_additionals.py  test_attributes.py  test_basic_tasks.py  test_blob.py  test_client.py  test_common.py  test_complex.py  test_cpp.py  test_cpp_tasklib.py  test_dataobj.py  test_events.py  test_executor.py  test_pipelines.py  test_program.py  test_python.py  test_resources.py  (+5 more)
utils/: fullcheck.sh  stylecheck.sh
(+155 files in other folders)
