[package]
name = "rain"
version = "0.1.0"
authors = [
    "Stanislav Bohm <spirali@kreatrix.org>",
    "Tomas Gavenciak <gavento@ucw.cz>",
    "Vojtech Cima <cima.vojtech@gmail.com>",
    ]
build = "build.rs"

[lib]
name = "librain"
path = "src/lib.rs"

[[bin]]
name = "rain"
path = "src/bin.rs"

[dependencies]
bitflags = "*"
capnp = "*"
capnp-rpc = "*"
clap = "*"
log = "*"
futures="*"
tokio-core="*"
tokio-io="*"
tokio-uds="*"
tokio-process="*"
env_logger = "*"
arrayref = "*"
num_cpus = "*"
nix = "*"

[build-dependencies]
capnpc = "0.8"

