[package]
name = "rain"
version = "0.1.0"
authors = [
    "Stanislav Bohm <spirali@kreatrix.org>",
    "Tomas Gavenciak <gavento@ucw.cz>",
    "Vojtech Cima <cima.vojtech@gmail.com>",
    ]
build = "build.rs"

[lib]
name = "librain"
path = "src/lib.rs"

[[bin]]
name = "rain"
path = "src/bin.rs"

[dependencies]
atty="*"
error-chain="*"
capnp = "*"
capnp-rpc = "*"
clap = "*"
log = "*"
futures="*"
tokio-core="*"
tokio-io="*"
tokio-timer = "*"
tokio-uds="*"
tokio-process="*"
env_logger = "*"
arrayref = "*"
num_cpus = "*"
nix = "*"
lazy_static = "*"
bytes = "*"
tempdir = "*"
memmap = "*"
sysconf = "*"
sys-info = "*"
hyper = "*"
chrono = { version = "*", features = ["serde"] }
rusqlite = { version = "*", features = ["chrono", "serde_json"] }
serde_derive = "*"
serde = "*"
serde_json = "*"

[build-dependencies]
capnpc = "0.8"