[package]
name = "rain-task"
version = "0.1.0"
authors = ["Tomas Gavenciak <gavento@ucw.cz>"]

[dependencies]
rain = { path = ".." }
log = ">=0.4"
serde_derive = "*"
serde = "*"
serde_json = "*"
byteorder = "*"

atty="*"
error-chain="*"
clap = "*"
futures="0.1"
tokio-core="*"
tokio-io="*"
tokio-timer = "*"
tokio-uds="*"
tokio-process="*"
env_logger = "*"
arrayref = "*"
num_cpus = "*"
nix = "*"
lazy_static = "*"
bytes = "*"
tempdir = "*"
memmap = "*"
sysconf = "*"
sys-info = "*"
chrono = { version = "*", features = ["serde"] }
tar = "*"
toml = "*"
walkdir = "*"
rmp-serde = "*"
rmp = "*"