[package]
name = "rain_task"
version = "0.1.0"
authors = ["Tomáš Gavenčiak <gavento@ucw.cz>"]
description = "A library to easily write custom Rain tasks in Rust."
licence = "MIT"

[dependencies]
rain = { path = ".." }
log = ">=0.4"
serde_derive = "1.*"
serde = "1.*"
serde_json = "1.*"
byteorder = ">=1.2"
serde_cbor = ">=0.8"
memmap = ">=0.6"
error-chain=">=0.11"
chrono = ">=0.4"
env_logger = ">=0.5"
