[package]
name = "rain_core"
version = "0.2.1"

description = "Distributed computational framework for large-scale task-based pipelines. Common core library."
documentation = "https://rain.readthedocs.io/"
homepage = "https://github.com/substantic/rain"
repository = "https://github.com/substantic/rain/"
readme = "README.md"
authors = [
    "Stanislav Bohm <spirali@kreatrix.org>",
    "Tomas Gavenciak <gavento@ucw.cz>",
    "Vojtech Cima <cima.vojtech@gmail.com>",
    ]
license = "MIT"

build = "build.rs"

[dependencies]
arrayref = "*"
bytes = "*"
capnp = "*"
capnp-rpc = "*"
chrono = { version = "*", features = ["serde"] }
error-chain="*"
futures="0.1"
lazy_static = "*"
log = ">=0.4"
nix = "*"
rusqlite = { version = "*", features = ["chrono", "serde_json"] }
serde = "*"
serde_bytes = "*"
serde_cbor = "*"
serde_derive = "*"
serde_json = "*"
sys-info = "*"
sysconf = "*"
tokio-core="*"
tokio-timer = "*"

[build-dependencies]
capnpc = "0.8"
