[package]
name = "rain_core"
version = "0.3.0-pre"

description = "Distributed computational framework for large-scale task-based pipelines. Common core library."
# documentation = "https://docs.rs/rain_core/" # defult docs.rs 
homepage = "https://github.com/substantic/rain/"
repository = "https://github.com/substantic/rain/"
readme = "README.md"
authors = [
    "Stanislav Bohm <spirali@kreatrix.org>",
    "Tomas Gavenciak <gavento@ucw.cz>",
    "Vojtech Cima <cima.vojtech@gmail.com>",
    ]
license = "MIT"

build = "build.rs"

[badges]
travis-ci = { repository = "substantic/rain", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
arrayref = "0.3"
bytes = "0.4"
capnp = "0.8"
capnp-rpc = "0.8"
chrono = { version = "0.4", features = ["serde"] }
error-chain="0.11"
futures="0.1"
lazy_static = "1.0"
log = "0.4"
nix = "0.11"
rusqlite = { version = "0.13", features = ["chrono", "serde_json"] }
serde = "1.0"
serde_bytes = "0.10"
serde_cbor = "0.8"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core="0.1"
tokio-timer = "0.2"

[build-dependencies]
capnpc = "0.8"
