[package]
name = "rain_server"
version = "0.2.1"

description = "Distributed computational framework for large-scale task-based pipelines. Server and governor binaries."
documentation = "https://rain.readthedocs.io/"
homepage = "https://github.com/substantic/rain"
repository = "https://github.com/substantic/rain/"
readme = "README.md"
authors = [
    "Stanislav Bohm <spirali@kreatrix.org>",
    "Tomas Gavenciak <gavento@ucw.cz>",
    "Vojtech Cima <cima.vojtech@gmail.com>",
    ]
license = "MIT"

[[bin]]
name = "rain"
path = "src/main.rs"

[dependencies]
atty="*"
bytes = "*"
capnp = "*"
capnp-rpc = "*"
chrono = { version = "*", features = ["serde"] }
clap = "*"
env_logger = "*"
error-chain="*"
fs_extra = "*"
futures="0.1"
hyper = "0.11"
log = ">=0.4"
memmap = "*"
nix = "*"
num_cpus = "*"
rain_core = { path = "../rain_core" }
serde = "*"
serde_bytes = "*"
serde_cbor = "*"
serde_derive = "*"
serde_json = "*"
tar = "*"
tempdir = "*"
tokio-core="*"
tokio-io="*"
tokio-process="0.1"
tokio-timer = "*"
tokio-uds="0.1"
toml = "*"
walkdir = "*"

[build-dependencies]
capnpc = "0.8"
