[package]
name = "rain_server"
version = "0.3.0"

description = "Distributed computational framework for large-scale task-based pipelines. Server and governor binaries."
documentation = "https://rain.readthedocs.io/"
homepage = "https://github.com/substantic/rain"
repository = "https://github.com/substantic/rain/"
readme = "README.md"
authors = [
    "Stanislav Bohm <spirali@kreatrix.org>",
    "Tomas Gavenciak <gavento@ucw.cz>",
    "Vojtech Cima <cima.vojtech@gmail.com>",
    ]
license = "MIT"

[badges]
travis-ci = { repository = "substantic/rain", branch = "master" }
maintenance = { status = "actively-developed" }

[[bin]]
name = "rain"
path = "src/main.rs"

[dependencies]
atty="0.2"
bytes = "0.4"
capnp = "0.8"
capnp-rpc = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
env_logger = "0.5"
error-chain="0.11"
fs_extra = "1"
futures="0.1"
hyper = "0.11"
log = "0.4"
memmap = "0.6"
nix = "0.11"
num_cpus = "1"
rain_core = "0.3.0"
serde = "1"
serde_bytes = "0.10"
serde_cbor = "0.8"
serde_derive = "1"
serde_json = "1"
tar = "0.4"
tempdir = "0.3"
rusqlite = { version = "0.13", features = ["chrono", "serde_json"] }
sys-info = "0.5"
sysconf = "0.3"
tokio-core="0.1"
tokio-io="0.1"
tokio-process="0.1"
tokio-timer = "0.2"
tokio-uds="0.1"
toml = "0.4"
walkdir = "2"

[build-dependencies]
capnpc = "0.8"
