[package]
name = "rain_task"
version = "0.4.0"

description = "Distributed computational framework for large-scale task-based pipelines. A custom task library in Rust."
# documentation = "https://docs.rs/rain_task/" # default docs.rs
homepage = "https://github.com/substantic/rain"
repository = "https://github.com/substantic/rain/"
readme = "README.md"
authors = [
    "Stanislav Bohm <spirali@kreatrix.org>",
    "Tomas Gavenciak <gavento@ucw.cz>",
    "Vojtech Cima <cima.vojtech@gmail.com>",
    ]
license = "MIT"

exclude = ["testing/**/*"]

[badges]
travis-ci = { repository = "substantic/rain", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
byteorder = "1.*"
chrono = "0.4"
env_logger = "0.5"
error-chain="0.11"
log = "0.4"
memmap = "0.6"
rain_core = "0.4.0"
serde = "1.*"
serde_cbor = "0.8"
serde_derive = "1.*"
serde_json = "1.*"
